# jarvis-spoticord

./: .gitignore  Cargo.toml  Dockerfile  Shuttle.toml  fly.toml
spoticord_bot/: Cargo.toml
spoticord_bot/src/: main.rs
spoticord_bot/src/bot/: mod.rs
spoticord_config/src/: env.rs  lib.rs
spoticord_database/: Dockerfile
spoticord_database/src/: lib.rs  migrations.rs
spoticord_session/src/: lib.rs
src/: main.rs
src/commands/music/: join.rs
